--- a/css/app.css
+++ b/css/app.css
@@ -65,6 +65,14 @@ nav {
     border: #FF0076 1.5px solid;
     color: #FF0076; }
 
+.imgMiddle {
+  position: relative;
+  margin: 0px auto; }
+
+.imgMax {
+  margin-bottom: 30px;
+  max-width: 800px; }
+
 .work {
   width: 100%;
   height: auto; }
