--- a/sass/app.scss
+++ b/sass/app.scss
@@ -87,6 +87,16 @@ nav {
   }
 }
 
+.imgMiddle {
+  position: relative;
+  margin: 0px auto;
+}
+
+.imgMax {
+  margin-bottom: 30px;
+  max-width: 800px;
+}
+
 .work {
   width: 100%;
   height: auto;
