--- a/sass/app.scss
+++ b/sass/app.scss
@@ -213,6 +213,18 @@ nav {
   }
 }
 
+footer p {
+  margin-top: 14px;
+  color:White;
+}
+
+footer {
+  text-align: center;
+  color: white;
+  background-color: $black;
+  min-height: 45px;
+}
+
 a > .btn-dot {
   left: 50%;
   margin-left: -25px;
