--- a/views/Sunnies.html
+++ b/views/Sunnies.html
@@ -154,7 +154,7 @@
         <div class="secondTemp">
           <div class="row">
             <div class="col-sm-6">
-              <img src="../images/sunnies/frames1.png" class="img-responsive" alt="">
+              <img src="../images/sunnies/frames1.png" style="margin-top:45px;" class="img-responsive" alt="">
             </div>
             <div class="col-sm-6">
               <img src="../images/sunnies/frames2.png" class="img-responsive" alt="">
