--- a/views/metro.html
+++ b/views/metro.html
@@ -90,7 +90,9 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
-              <div class="">
+              <div class="" style="
+    margin-bottom: 85px;
+">
                 <h3>Using Union Station as a focal point we broke down the taxonomy of Los Angeles’ transit system. Putting each part of the taxonomy on to flash cards I conducted card sorting exercises with several people. These people were LA residents and frequent to moderate users of LA Metro. The results really showed how the large Metro system can be overwhelming to users and how users are really unaware of alot of the services that are provided by Metro.</h3>
 
             </div>
@@ -170,7 +172,13 @@
                 <p>Metro’s current fare system places too many inconveniences for the user.  </p>
               </div>
               <div class="col-sm-8">
-                <img src="../images/metro/ui1.png" class="img-responsive imgMiddle" alt="">
+                <div class="col-xs-6">
+                  <img src="../images/metro/IMG_1091.jpg" class="img-responsive imgMiddle" alt="">
+                </div>
+                <div class="col-xs-6">
+                  <img src="../images/metro/kiosk.png" class="img-responsive imgMiddle" style="transform:rotate(90deg); top:44px; position:relative; width: 100%;" alt="">
+                </div>
+
               </div>
             </div>
           </div>
@@ -185,6 +193,7 @@
               </div>
             </div>
           </div>
+          <br>
         </div>
 
         <div class="secondWork">
@@ -201,9 +210,44 @@
                 </div>
                 <div class="col-sm-4">
                 <img src="../images/metro/ui2.png" class="img-responsive imgMiddle" alt="">
-              </div>
-              </div>
+              </div><br>
             </div>
+            </div>
+<br><br><br><br>
+            <div class="row">
+              <div class="col-sm-4">
+                <h2>Online Reload</h2>
+                <ul>
+                  <li>Reloads Digital and Physical Tap Cards</li>
+                  <li>Enables Personalized tracking features</li>
+                  <li>Helps keeps users prepared for their trips on Metro</li>
+                </ul>
+              </div>
+              <div class="col-sm-8">
+
+                  <img src="../images/metro/ui1.png" class="img-responsive imgMiddle" alt="">
+
+              </div>
+
+            </div>
+
+            <div class="row">
+              <br><br><br><br>
+              <div class="col-sm-8">
+
+                  <img src="../images/metro/ui1.png" class="img-responsive imgMiddle" alt="">
+
+              </div>
+              <div class="col-sm-4">
+                <h2>Non-Metro Transfers</h2>
+                <ul>
+                  <li>Syncs with Apple Wallet</li>
+                  <li>Integrates all terrestrial forms of transportation that connect with LA with the Metro transit system.</li>
+                </ul>
+              </div>
+
+            </div>
+
           </div>
         </div>
 
